Add protocol version awareness and login support for <1.21.1
Introduces protocol version tracking throughout the pipeline, including a new UNKNOWN version and utility methods in ProtocolVersion. PacketRegistry and codec classes now handle protocol version-specific packet mappings, and LoginHandler sends OldLoginSuccessPacket for legacy versions. Refactors handlers for constructor requirements and improves status handling logic.